Generalize retrieval of experiment and assay post-filters for all data types